# sisyphus

./: Main.hs  README.org  Simanneal.hs  app.cabal  default.nix  generate-icons.sh  index.html  shell.nix  sisyphuspwa.webmanifest
src/: Main.hs  RandomUtils.hs  Simanneal.hs  Task.hs  Types.hs
tests/: test.hs
