name:                app
version:             0.1.0.0
synopsis:            First miso app
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable app
  main-is:             Main.hs
  other-modules:       Simanneal
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
  ghcjs-options:
    -dedupe
  build-depends:       base, miso, aeson, time, containers, random, mtl, transformers
  if !impl(ghcjs)
    build-depends:
       jsaddle, jsaddle-warp, transformers, warp, websockets
  default-language:    Haskell2010
