name:                app
version:             0.1.0.0
synopsis:            First miso app
category:            Web
build-type:          Simple
cabal-version:       >=1.10

test-suite main-tests
  main-is: test.hs

  type: exitcode-stdio-1.0

  build-depends: tasty, tasty-hunit, tasty-quickcheck, base, mtl, transformers, random, miso, time, containers, aeson, lens
  other-modules:       Simanneal, Task, Types
  hs-source-dirs: src, tests
  default-language: Haskell2010

executable app
  main-is:             Main.hs
  other-modules:       Simanneal, Task, Types
  hs-source-dirs: src
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
  ghcjs-options:
    -dedupe
  build-depends:       base, miso, aeson, time, containers, random, mtl, transformers, lens
  if !impl(ghcjs)
    build-depends:
       jsaddle, jsaddle-warp, transformers, warp, websockets
  default-language:    Haskell2010
